--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -47,8 +47,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY)
 			}
 
 			// changes the text displayed on the Box
@@ -61,28 +62,41 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
+			var minimum = 0;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
+			/*your code has increase by 10*/
 			function update() {
-				
-
-			};
-
+				positionX += speed;
+				moveBoxTo(positionX);
+				if (positionX > boardWidth) {
+					speed = -speed;
+				}
+				if (positionX < minimum) {
+					speed = -speed;
+				}
+			};		
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
-
+				positionX = 0;
+				points = points + 1;
+				changeBoxText(points);
+			if (speed > 0) {
+				speed += 3;
+			}
+			else if (speed < 0) {
+				speed -= 3;
+			}
 			};
 		})();
 	</script>
